# sword

./: Cargo.toml
benches/: benchmark.rs
src/: crawler.rs  lib.rs  main.rs  model.rs  uk_sanctions_list.rs
src/crawler/: crawler.rs  uk_sanctions.rs  un_sanctions.rs
src/model/: person.rs  uk_sanctions_list.rs  un_sanctions_list.rs
